Add view/controller interfaces and ChatMainView
Introduce interfaces to decouple controllers and views (ICanalController, IListMessageController, IUserController and multiple I*View interfaces) and update implementations to use them. Refactor list and message views to accept/interface types (IMessageView, IListMessageView, IListCanalView, IListUserView, etc.), add event hooks (e.g. setOnSendRequested, setOnLoginRequested, setOnRegisterRequested) and minor UI fixes/casts. Add a new ChatMainView composite (GridBag layout) and update ComposantFactory to return interface types. Add small controller/API changes (ListMessageController.addMessage, default controller implementations) and populate sample data in MessageAppLauncher for local testing.