@@ -1,16 +1,18 @@
 package com.ubo.tp.message.controller.impl;
 
 
+import com.ubo.tp.message.controller.service.IListMessageController;
 import com.ubo.tp.message.core.IDataManager;
 import com.ubo.tp.message.datamodel.Message;
 import com.ubo.tp.message.ihm.service.IListMessageView;
+import com.ubo.tp.message.ihm.service.IMessageView;
 import com.ubo.tp.message.ihm.view.MessageView;
 import com.ubo.tp.message.logger.Logger;
 
 import java.util.List;
-import java.util.Set;
+import java.util.stream.Collectors;
 
-public class ListMessageController {
+public class ListMessageController implements IListMessageController {
 
     private final Logger LOGGER;
 
@@ -24,21 +26,23 @@ public class ListMessageController {
 
         this.view.setOnRefreshRequested(this::refreshMessages);
     }
-    private Set<Message> getMessages() {
-        return dataManager.getMessages();
-    }
 
-    private List<MessageView> createMessageViews() {
-        return getMessages().stream()
-                .map( m -> new MessageView(LOGGER, m) )
-                .toList();
+    private List<IMessageView> refreshListMessagesView() {
+        return dataManager.getMessages().stream()
+                .map( m -> (IMessageView) new MessageView(LOGGER, m) )
+                .collect(Collectors.toList());
     }
 
     public void refreshMessages() {
         LOGGER.debug("ListMessageController: rafraîchissement des messages");
-        this.view.setMessages(createMessageViews());
+        this.view.setMessages(refreshListMessagesView());
     }
 
+    public void addMessage(Message message) {
+        LOGGER.debug("ListMessageController: ajout d'un message");
+        dataManager.sendMessage(message);
+        refreshMessages();
+    }
 
 
 }
